--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,14 @@
+html {
+  background-color: #222;
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
 
-
 .App-header {
-  background-color: #222;
+  background-color: black;
   height: 150px;
   padding: 20px;
   color: white;
@@ -18,7 +22,21 @@
   font-size: large;
 }
 
+.breadcrumb-container {
+  display: flex;
+  justify-content: center;
+}
+
+.breadcrumb {
+  height: 100px;
+  text-align: center;
+}
+
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
