--- a/src/components/MovieItem/MovieItem.css
+++ b/src/components/MovieItem/MovieItem.css
@@ -1,5 +1,6 @@
-/* .card-image {
+.card-container {
   display: flex;
+  align-items: center;
   justify-content: center;
-  height: auto;
-} */
+  margin-bottom: 20px;
+}
